force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Release_Stamp_Batch_ID__c/agf__ADM_Release_Stamp_Batch_ID__c.object-meta.xml
<CustomObject>
    <label>Release Stamp Batch ID</label>
    <nameField>
        <displayFormat>RSBID-{000000}</displayFormat>
        <label>Release Stamp Batch ID Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Release Stamp Batch IDs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>