force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Release_Stamp_Batch_ID__c/fields/agf__Batch_ID__c.field-meta.xml
<CustomField>
    <fullName>agf__Batch_ID__c</fullName>
    <label>Batch ID</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>