force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Release_Stamp_Batch_ID__c/fields/agf__Release__c.field-meta.xml
<CustomField>
    <fullName>agf__Release__c</fullName>
    <label>Release</label>
    <referenceTo>agf__ADM_Release__c</referenceTo>
    <relationshipLabel>Release Stamp Batch IDs</relationshipLabel>
    <relationshipName>Release_Stamp_Batch_IDs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>