force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Release_Stamp_Batch_ID__c/fields/agf__Release_From__c.field-meta.xml
<CustomField>
    <fullName>agf__Release_From__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Release From</label>
    <referenceTo>agf__ADM_Release__c</referenceTo>
    <relationshipLabel>Release Stamp Batch IDs (Release From)</relationshipLabel>
    <relationshipName>Release_Stamp_Batch_IDs_From</relationshipName>
    <type>Lookup</type>
</CustomField>